# nimgl

./: .gitignore  CMakeLists.txt  NContext.cpp  NContext.h  NShader.cpp  NShader.h  NSprite2D.cpp  NSprite2D.h  NTexture.cpp  NTexture.h  NVertexBuffer.cpp  NVertexBuffer.h  NVertices.h  NWindow.cpp  NWindow.h  NWindowContext.cpp  NWindowContext.h  NimGL.cpp  NimGL.h  NimGL_internal.h  Readme.md  StdH.h  StdHP.h  main.cpp
Assets/: Quad.frg.sha  Quad.vtx.sha
NCore/: NCore.h  NFiles.cpp  NFiles.h  NString.cpp  NString.h  StdH.h
